notes/GatwayClass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: aws-alb-accor
spec:
  controllerName: gateway.k8s.aws/alb
