notes/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-http-gateway
  namespace: default
  annotations:
      alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  # Reference the controller implementation installed in your cluster
  # (e.g., istio.io/gateway-controller, gateway.nginx.org/nginx, envoy)
  gatewayClassName: aws-alb-accor
  listeners:
  - name: http-listener
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
